correction bug de la scrollbar horizontal

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -105,6 +105,7 @@ html{
 }
 .container{
     width: 100%;
+    overflow-x: hidden;
 }
 header{
     padding: {
